--- a/Morseview/requirements.txt
+++ b/Morseview/requirements.txt
@@ -4,7 +4,7 @@ blinker==1.4
 cachelib==0.9.0
 cachetools==5.2.1
 certifi==2022.12.7
-cffi==1.14.5
+# cffi==1.14.5
 charset-normalizer==3.0.1
 click==7.1.2
 dnspython==2.1.0
@@ -18,7 +18,7 @@ Flask-Session==0.4.0
 Flask-SocketIO==5.3.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
-greenlet==1.0.0
+# greenlet==1.0.0
 gunicorn==21.2.0
 idna==3.1
 importlib-metadata==4.0.1
@@ -27,7 +27,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 packaging==23.2
-Pillow==8.2.0
+# Pillow==8.2.0
 pipdeptree==2.9.6
 protobuf==4.21.12
 pyasn1==0.4.8
@@ -36,7 +36,7 @@ pycparser==2.20
 python-engineio==4.3.4
 python-socketio==5.7.2
 requests==2.28.2
-RPi.GPIO==0.7.0
+# RPi.GPIO==0.7.0
 rsa==4.9
 six==1.16.0
 SQLAlchemy==1.4.13
